# as_bot_business_program

./: Dockerfile  compose.yml  pyproject.toml
as_bot_business_program/: chats_config.py  consts.py
as_bot_business_program/bot/: bot.py  main.py
as_bot_business_program/db/: manager.py  tables.py
as_bot_business_program/enums/: service_chat_id_enum.py  service_comment_enum.py  service_name_enum.py  service_state_enum.py
as_bot_business_program/models/: service_model.py
as_bot_business_program/utils/: filters.py  funcs.py  keyboards.py  services.py
