[tool.poetry]
name = "as-bot-business-program"
version = "0.1.0"
description = ""
authors = ["arsenyvolodko <arvolodko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.39"
aiogram = "^3.19.0"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
greenlet = "^3.1.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
